# Crash-Test-Dummies

./: .gitignore  .project  Ausarbeitung.docx  Integration.cpp  README.md  installFindObject.sh  installOpenCV3_4.sh  sign_recognition.launch
Abschlussvortrag/: Abschlussvortrag.aux  Abschlussvortrag.blg  Abschlussvortrag.tex  Abschlussvortrag.toc  PSESAbschlussvortrag.aux  PSESAbschlussvortrag.tex  PSESAbschlussvortrag.toc  Schriften_installieren.txt  TUDreport.aux  TUDthesis.aux  TUDthesis.blg  TUDthesis.tex  TUDthesis.toc  literature.bib  tudreport.cls  tudthess_title.sty
Abschlussvortrag/chapters/: Introduction.tex  Second.tex
camera/: CMakeLists.txt  package.xml
camera/src/: camera_node.cpp
doc/: ES_Vorlage_Präsentationen.pptx  PID Regelung1.0 Überarbeitung.doc  PID Regelung1.0.docx  ~$D Regelung1.0 Überarbeitung.doc  ~$D Regelung1.0.docx
doc/Abschlussbericht/: Schriften_installieren.txt  TUDthesis.aux  TUDthesis.bbl  TUDthesis.blg  TUDthesis.dvi  TUDthesis.out  TUDthesis.tex  TUDthesis.toc  literature.bib  tudthess_title.sty
doc/Abschlussbericht Schildererkennung/: Schildererkennung Distanz Berechnung.xlsx  ~$hildererkennung Abschlussbericht.docx
pses_camare/: CMakeLists.txt  package.xml
pses_control_1/: CMakeLists.txt  package.xml
pses_control_2/: CMakeLists.txt  README.md  package.xml
pses_control_mpc/: CMakeLists.txt  LICENSE  README.md  manifest.xml  package.xml
pses_control_test/: CMakeLists.txt  LICENSE  README.md  package.xml  rosdoc.yaml
pses_dashboard/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
pses_dashboard/docs/: index.html  manifest.yaml
pses_dashboard/docs/html/: index-msg.html  index.html
pses_dashboard/docs/html/c++/: annotated.html  classDashboard-members.html  classDashboard.html  classDashboard__inherit__graph.map  classDashboard__inherit__graph.md5  classes.html  dashboard_8cpp.html  dashboard_8cpp__incl.map  dashboard_8cpp__incl.md5  dashboard_8cpp_source.html  dashboard_8h.html  dashboard_8h__dep__incl.map  dashboard_8h__dep__incl.md5  dashboard_8h__incl.map  dashboard_8h__incl.md5  dashboard_8h_source.html  dashboard__node_8cpp.html  dashboard__node_8cpp__incl.map  dashboard__node_8cpp__incl.md5  dashboard__node_8cpp_source.html  dir_000000_000001.html  dir_436792a0677780875f91de35046dee9d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  mainpage_8dox.html  namespaceDash.html  namespaceUi.html  (+4 more)
pses_dashboard/include/pses_dashboard/: dashboard.h  dashboard.ui
pses_dashboard/src/: dashboard.cpp  dashboard_node.cpp
pses_dynamicReconfig/: CMakeLists.txt  package.xml
pses_helloworld/: CMakeLists.txt  README.md  package.xml
pses_odometry/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
pses_sign_recognition/: CMakeLists.txt  README.md  package.xml
pses_simulation/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
pses_ucbridge/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
(+2024 files in other folders)
