<?xml version="1.0"?>
<package>
  <name>pses_dashboard</name>
  <version>0.4.3</version>
  <description>The pses_dashboard package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sebastian.ehmes@gmx.de">Sebastian Ehmes</maintainer>
  <maintainer email="aceronicolas@hotmail.com">Nicolas Acero</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="repository">https://github.com/tud-pses/pses_dashboard</url>
  <url type="website">https://github.com/tud-pses/pses_dashboard/wiki</url>
  <url>https://github.com/tud-pses/pses_dashboard</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="sebastian.ehmes@gmx.de">Sebastian Ehmes</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>Qt5Core</build_depend>
  <build_depend>Qt5Widgets</build_depend>
  <build_depend>Qt5Gui</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>pses_ucbridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>Qt5Core</run_depend>
  <run_depend>Qt5Widgets</run_depend>
  <run_depend>Qt5Gui</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>pses_ucbridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rosdoc config="rosdoc.yaml" />

  </export>
</package>
